WebSection/MyPortfolio/css/portfolio.css
body {
    margin: 0;
    font-family: "Lato", sans-serif;
}

.sidebar {
    margin: 0;
    padding: 0;
    width: 200px;
    background-color: #f1f1f1;
    position: fixed;
    height: 100%;
    overflow: auto;
}

.sidenav-bottom {
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 80%;
    left: 0;
    /* background-color: rgb(243, 22, 22); */
    overflow-x: hidden;
    padding-top: 20px;
    text-align: center;
}

.sidenav-bottom img {
    width: 50px;
    height: 50px;
    background-color: #0c71cf;
    border-radius: 50%;
    margin-right: 20px;
    /* text-align: center; */
}

img#icon {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    /* border: 1px solid rgb(255, 0, 0); */
    opacity: 0.5;
    display: block;
    margin-left: auto;
    margin-right: auto;
}


/* sub nav */


/* CSS universal selectors */

.nav-area * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.nav-area input[type="radio"] {
    display: none;
}

li,
label,
ul,
a.main-section {
    width: 100%;
    color: blue;
    display: block;
    font-weight: bold;
    text-align: left;
    /* border-style: solid; */
}

.nav-area ul li {
    height: 50px;
    overflow: hidden;
    transition: all .3s;
    display: block;
}

.nav-area label,
.main-section {
    font-size: 20px;
    padding: 10px 15px;
    height: 50px;
    cursor: pointer;
    transition: all .25s;
}

.sub {
    padding: 10px 15px;
    cursor: pointer;
    transition: all .25s;
    /* border-style: solid; */
}

.main-section {
    text-decoration: none;
}

.nav-area>ul>li>a {
    font-size: 15px;
    text-decoration: none;
    color: black;
    display: block;
    padding: 8px 25px;
    transition: all .25s;
}

.nav-area>ul>li>a:hover,
.main-section:hover {
    background-color: gray;
    /* height: auto; */
    /* text-decoration: none; */
}

.nav-area input[type="radio"] {
    display: none;
}

#about:checked+li,
#services:checked+li,
#portfolio:checked+li {
    height: auto;
    /* width: 100%; */
}

div.content {
    margin-left: 200px;
    /* padding: 1px 16px; */
    height: 1300px;
    /* max-height: max-content; */
    /* background-size: 80% auto; */
    /* background-color: black; */
    /* color: white; */
}

div.content #home {
    background: url(../images/hacker.webp) center;
    background-repeat: no-repeat;
    /* border-image: red solid 2px; */
    /* padding: 1px 16px; */
    /* height: 1300px; */
    /* max-height: max-content; */
    /* background-size: 80% auto; */
    /* background-color: black;
    color: white; */
}

.main {
    position: realtive;
    border: solid rgb(89, 0, 255);
    background-color: silver;
    height: 100%;
    width: 95%;
}

div:target {
    border: 2px solid rgb(117, 236, 6);
    color: red;
    background-color: cyan;
}

@media screen and (max-width: 700px) {
    .sidebar {
        width: 100%;
        height: auto;
        position: relative;
    }
    .sidebar a {
        float: left;
    }
    div.content {
        margin-left: 0;
    }
}

@media screen and (max-width: 400px) {
    .sidebar a {
        text-align: center;
        float: none;
    }
}

